--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LuxeCart - Your One-Stop Shopping Destination</title>
+    <title>Blingo - Your One-Stop Shopping Destination</title>
     <style>
         * {
             margin: 0;
@@ -770,7 +770,7 @@
                 <div class="header-content">
                     <a href="#" class="logo">
                         <i class="fa fa-shopping-bag"></i>
-                        LuxeCart
+                        Blingo
                     </a>
                     <nav>
                         <ul>
@@ -1196,7 +1196,7 @@
                 <div class="header-content">
                     <a href="#" class="logo">
                         <i class="fas fa-shopping-bag"></i>
-                        LuxeCart
+                        Blingo
                     </a>
                 </div>
             </div>
