--- a/index.html
+++ b/index.html
@@ -53,6 +53,27 @@
             font-size: 28px;
         }
 
+
+        /* Adjustable Navigation */
+.adjustable-nav {
+    position: absolute;
+    left: 50%;
+    transform: translateX(calc(-50% + var(--nav-adjust)));
+    transition: transform 0.3s ease;
+}
+
+.adjustable-nav ul {
+    display: flex;
+    gap: 20px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.header-content {
+    position: relative; /* Needed for absolute positioning */
+}
+
         nav ul {
             display: flex;
             list-style: none;
@@ -674,7 +695,8 @@
 
         /* Logout Button Styles */
         .user-controls {
-            margin-left: 20px;
+            margin-left: -10px; /* Changed from 20px to 10px */
+            margin-right: 10px; /* Add this to balance spacing */
         }
 
         .btn-logout {
@@ -826,6 +848,10 @@
                 <h3>Registration Disabled</h3>
                 <p>This feature is currently in beta testing</p>
                 <p>Please use the provided credentials to login</p>
+                <button class="btn" id="back-to-login-from-register" style="margin-top: 15px;">
+        <i class="fas fa-sign-in-alt"></i>
+        Back to Login
+    </button>
             </div>
             <h2 class="form-title">Create an Account</h2>
             <form id="register-form">
@@ -858,19 +884,19 @@
         <header>
             <div class="container">
                 <div class="header-content">
-                    <a href="#" class="logo">
+                    <a href="#" class="logo" id="blingo-logo">
                         <i class="fa fa-shopping-bag"></i>
                         Blingo
                     </a>
                     <div id="user-greeting" class="user-greeting hidden">
                         Hello, <span id="username-display"></span>
                     </div>
-                    <nav>
-                        <ul>
-                            <li><a href="#" class="nav-link" data-category="all">Products</a></li>
-                            <li><a href="#" class="nav-link" data-category="packs">Packs</a></li>
-                        </ul>
-                    </nav>
+                    <nav class="adjustable-nav" style="--nav-adjust: -30px;">
+    <ul>
+        <li><a href="#" class="nav-link" data-category="all">Products</a></li>
+        <li><a href="#" class="nav-link" data-category="packs">Packs</a></li>
+    </ul>
+</nav>
                     <div class="search-cart">
                         <form class="search-form" id="search-form">
                             <input type="text" id="search-input" placeholder="Search products...">
@@ -1504,6 +1530,16 @@
             cartPage.classList.remove('hidden');
             updateCartDisplay();
         });
+
+
+
+
+
+        document.getElementById('back-to-login-from-register').addEventListener('click', function(e) {
+    e.preventDefault();
+    registerPage.classList.add('hidden');
+    loginPage.classList.remove('hidden');
+});
 
         document.getElementById('back-to-shop-from-cart').addEventListener('click', function(e) {
             e.preventDefault();
