--- a/index.html
+++ b/index.html
@@ -1418,7 +1418,7 @@
         let currentUser = null;
 const validUsers = [
     { email: "admin@example.com", username: "admin", password: "admin1234", isAdmin: true },
-    { email: "user@example.com", username: "user", password: "user1234", isAdmin: false }
+    { email: "user1@example.com", username: "user", password: "user1234", isAdmin: false }
 ];
 let userSessions = []; // Track all active sessions
 
