--- a/index.html
+++ b/index.html
@@ -1806,7 +1806,7 @@ function updateUIAfterLogin(user) {
     // Banner visibility (only shows for 'all' category)
     const banner = document.querySelector('.sliding-banner');
     if (banner) {
-        banner.style.display = category === 'all' ? 'block' : 'none';
+        banner.style.display = category === 'all' ? 'block' : 'packs';
     }
 }
 
