--- a/index.html
+++ b/index.html
@@ -1831,7 +1831,7 @@ body.search-active .sliding-banner {
         // User authentication
         let currentUser = null;
 const validUsers = [
-    { email: "admin@example.com", username: "admin", password: "admin", isAdmin: true },
+    { email: "admin@example.com", username: "admin", password: "admin1", isAdmin: true },
     { email: "user@example.com", username: "user", password: "user1234", isAdmin: false }
 ];
 let userSessions = []; // Track all active sessions
