--- a/index.html
+++ b/index.html
@@ -2939,8 +2939,8 @@ document.addEventListener('DOMContentLoaded', function() {
 <!-- Minimal Footer -->
 <footer class="site-footer">
     <div class="footer-content">
-        <p>&copy; 2023 Blingo. All Rights Reserved.</p>
-        <p><a href="mailto:support@blingo.com">support@blingo.com</a></p>
+        <p>&copy; 2025 Blingo. All Rights Reserved.</p>
+        <p><a href="mailto:polerie2@gmail.com">polerie2@gmail.com</a></p>
     </div>
 </footer>
 </body>
