--- a/index.html
+++ b/index.html
@@ -1332,8 +1332,8 @@ body.search-active .sliding-banner {
                          data-product-id="4" 
                          data-product-name="Gaming Graphics Card RTX 5090" 
                          data-product-price="1979"
-                         data-product-img="Imgs/La-rumeur-de-la-NVIDIA-GeForce-RTX-5090-avec-un.jpg">
-                        <img src="Imgs/La-rumeur-de-la-NVIDIA-GeForce-RTX-5090-avec-un.jpg" alt="RTX 5090">
+                         data-product-img="Imgs/gpu.png">
+                        <img src="Imgs/gpu.png" alt="RTX 5090">
                         <div class="banner-caption">
                             <h3>GIGABYTE</h3>
                             <p>RTX5090TI</p>
@@ -1436,8 +1436,8 @@ body.search-active .sliding-banner {
                                 <span class="original-price">$1,999</span>
                             </div>
                             <div class="product-actions">
-                                <button class="btn add-to-cart" data-id="4" data-name="Nvidia RTX 5090" data-price="1979" data-img="Imgs/La-rumeur-de-la-NVIDIA-GeForce-RTX-5090-avec-un.jpg">Add to Cart</button>
-                                <button class="btn buy-now" data-id="4" data-name="Nvidia RTX 5090" data-price="1979" data-img="Imgs/La-rumeur-de-la-NVIDIA-GeForce-RTX-5090-avec-un.jpg">Buy Now</button>
+                                <button class="btn add-to-cart" data-id="4" data-name="Nvidia RTX 5090" data-price="1979" data-img="Imgs/gpu.png">Add to Cart</button>
+                                <button class="btn buy-now" data-id="4" data-name="Nvidia RTX 5090" data-price="1979" data-img="Imgs/gpu.png">Buy Now</button>
                             </div>
                         </div>
                     </div>
