--- a/index.html
+++ b/index.html
@@ -1332,8 +1332,8 @@ body.search-active .sliding-banner {
                          data-product-id="4" 
                          data-product-name="Gaming Graphics Card RTX 5090" 
                          data-product-price="1979"
-                         data-product-img="Imgs/gpu.png">
-                        <img src="Imgs/gpu.png" alt="RTX 5090">
+                         data-product-img="Imgs/gbanner.png">
+                        <img src="Imgs/gbanner.png" alt="RTX 5090">
                         <div class="banner-caption">
                             <h3>GIGABYTE</h3>
                             <p>RTX5090TI</p>
@@ -1426,7 +1426,7 @@ body.search-active .sliding-banner {
                     <!-- PC Components Products -->
                     <div class="product-card" data-category="pc-components">
                         <div class="product-image">
-                            <img src="Imgs/La-rumeur-de-la-NVIDIA-GeForce-RTX-5090-avec-un.jpg" alt="Nvidia RTX 5090">
+                            <img src="Imgs/gpu.png" alt="Nvidia RTX 5090">
                             <span class="discount-tag">-1%</span>
                         </div>
                         <div class="product-info">
