--- a/index.html
+++ b/index.html
@@ -1493,7 +1493,7 @@ body.search-active .sliding-banner {
 
                     <div class="product-card" data-category="Transports">
                         <div class="product-image">
-                            <img src="Imgs/download.jpg" alt="2001 Gulfstream IVSP Private Plane">
+                            <img src="Imgs/jet.jpg" alt="2001 Gulfstream IVSP Private Plane">
                         </div>
                         <div class="product-info">
                             <h3 class="product-title">2001 Gulfstream IVSP Private Plane</h3>
@@ -1501,8 +1501,8 @@ body.search-active .sliding-banner {
                                 <span class="current-price">$3,995,000</span>
                             </div>
                             <div class="product-actions">
-                                <button class="btn add-to-cart" data-id="10" data-name="2001 Gulfstream IVSP Private Plane" data-price="3995000" data-img="Imgs/download.jpg">Add to Cart</button>
-                                <button class="btn buy-now" data-id="10" data-name="2001 Gulfstream IVSP Private Plane" data-price="3995000" data-img="Imgs/download.jpg">Buy Now</button>
+                                <button class="btn add-to-cart" data-id="10" data-name="2001 Gulfstream IVSP Private Plane" data-price="3995000" data-img="Imgs/jet.jpg">Add to Cart</button>
+                                <button class="btn buy-now" data-id="10" data-name="2001 Gulfstream IVSP Private Plane" data-price="3995000" data-img="Imgs/jet.jpg">Buy Now</button>
                             </div>
                         </div>
                     </div>
