--- a/index.html
+++ b/index.html
@@ -1388,7 +1388,7 @@ body.search-active .sliding-banner {
                             </div>
                         </div>
                     </div>
-                    <div class="product-card" data-category="cosmetics">
+                    <div class="product-card" data-category="clothing">
                         <div class="product-image">
                             <img src="Imgs/783e6f_012983d54aae4996a27900867aea1b3f~mv2.png" alt="Jada Dubai x Passion Jewellers Passion Diamond Shoes">
                         </div>
