--- a/index.html
+++ b/index.html
@@ -1571,6 +1571,22 @@ body.search-active .sliding-banner {
                             </div>
                         </div>
                     </div>
+
+                    <div class="product-card" data-category="packs">
+                        <div class="product-image">
+                            <img src="Imgs/61qko9+DJGL._AC_SY300_SX300_.jpg" alt="Dingo FULL PC Bundle">
+                        </div>
+                        <div class="product-info">
+                            <h3 class="product-title">Dingo FULL PC Bundle</h3>
+                            <div class="product-price">
+                                <span class="current-price">FREE</span>
+                            </div>
+                            <div class="product-actions">
+                                <button class="btn add-to-cart" data-id="12" data-name="Dingo FULL PC Bundle" data-price="0" data-img="Imgs/61qko9+DJGL._AC_SY300_SX300_.jpg">Add to Cart</button>
+                                <button class="btn buy-now" data-id="12" data-name="Dingo FULL PC Bundle" data-price="0" data-img="Imgs/61qko9+DJGL._AC_SY300_SX300_.jpg">Buy Now</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
