--- a/index.html
+++ b/index.html
@@ -1332,7 +1332,7 @@ body.search-active .sliding-banner {
                          data-product-id="4" 
                          data-product-name="Gaming Graphics Card RTX 5090" 
                          data-product-price="1979"
-                         data-product-img="Imgs/gbanner.png">
+                         data-product-img="Imgs/gpu.png">
                         <img src="Imgs/gbanner.png" alt="RTX 5090">
                         <div class="banner-caption">
                             <h3>GIGABYTE</h3>
@@ -1460,6 +1460,22 @@ body.search-active .sliding-banner {
 
                     <div class="product-card" data-category="pc-components">
                         <div class="product-image">
+                            <img src="Imgs/mouse.png" alt="White Shark GAMING GM-5009 GARETH BLACK">
+                        </div>
+                        <div class="product-info">
+                            <h3 class="product-title">White Shark GAMING GM-5009 GARETH BLACK</h3>
+                            <div class="product-price">
+                                <span class="current-price">$15</span>
+                            </div>
+                            <div class="product-actions">
+                                <button class="btn add-to-cart" data-id="6" data-name="White Shark GAMING GM-5009 GARETH BLACK" data-price="15" data-img="Imgs/mouse.png">Add to Cart</button>
+                                <button class="btn buy-now" data-id="6" data-name="White Shark GAMING GM-5009 GARETH BLACK" data-price="15" data-img="Imgs/mouse.png">Buy Now</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="product-card" data-category="pc-components">
+                        <div class="product-image">
                             <img src="Imgs/2900400-ryzen-7-9800x3d.png" alt="High Gaming Performance CPU">
                         </div>
                         <div class="product-info">
@@ -1468,8 +1484,8 @@ body.search-active .sliding-banner {
                                 <span class="current-price">$479</span>
                             </div>
                             <div class="product-actions">
-                                <button class="btn add-to-cart" data-id="6" data-name="AMD RYZEN 7 9800X3D" data-price="479" data-img="Imgs/2900400-ryzen-7-9800x3d.png">Add to Cart</button>
-                                <button class="btn buy-now" data-id="6" data-name="AMD RYZEN 7 9800X3D" data-price="479" data-img="Imgs/2900400-ryzen-7-9800x3d.png">Buy Now</button>
+                                <button class="btn add-to-cart" data-id="7" data-name="AMD RYZEN 7 9800X3D" data-price="479" data-img="Imgs/2900400-ryzen-7-9800x3d.png">Add to Cart</button>
+                                <button class="btn buy-now" data-id="7" data-name="AMD RYZEN 7 9800X3D" data-price="479" data-img="Imgs/2900400-ryzen-7-9800x3d.png">Buy Now</button>
                             </div>
                         </div>
                     </div>
@@ -1485,8 +1501,8 @@ body.search-active .sliding-banner {
                                 <span class="current-price">$75,000,000</span>
                             </div>
                             <div class="product-actions">
-                                <button class="btn add-to-cart" data-id="7" data-name="SILVER EDGE" data-price="75000000" data-img="Imgs/SILVER+EDGE_01_2015-20200821-Global-High_front_34_LR-1I70Umhy.png">Add to Cart</button>
-                                <button class="btn buy-now" data-id="7" data-name="SILVER EDGE" data-price="75000000" data-img="Imgs/SILVER+EDGE_01_2015-20200821-Global-High_front_34_LR-1I70Umhy.png">Buy Now</button>
+                                <button class="btn add-to-cart" data-id="8" data-name="SILVER EDGE" data-price="75000000" data-img="Imgs/SILVER+EDGE_01_2015-20200821-Global-High_front_34_LR-1I70Umhy.png">Add to Cart</button>
+                                <button class="btn buy-now" data-id="8" data-name="SILVER EDGE" data-price="75000000" data-img="Imgs/SILVER+EDGE_01_2015-20200821-Global-High_front_34_LR-1I70Umhy.png">Buy Now</button>
                             </div>
                         </div>
                     </div>
@@ -1501,8 +1517,8 @@ body.search-active .sliding-banner {
                                 <span class="current-price">$3,995,000</span>
                             </div>
                             <div class="product-actions">
-                                <button class="btn add-to-cart" data-id="10" data-name="2001 Gulfstream IVSP Private Plane" data-price="3995000" data-img="Imgs/jet.jpg">Add to Cart</button>
-                                <button class="btn buy-now" data-id="10" data-name="2001 Gulfstream IVSP Private Plane" data-price="3995000" data-img="Imgs/jet.jpg">Buy Now</button>
+                                <button class="btn add-to-cart" data-id="11" data-name="2001 Gulfstream IVSP Private Plane" data-price="3995000" data-img="Imgs/jet.jpg">Add to Cart</button>
+                                <button class="btn buy-now" data-id="11" data-name="2001 Gulfstream IVSP Private Plane" data-price="3995000" data-img="Imgs/jet.jpg">Buy Now</button>
                             </div>
                         </div>
                     </div>
@@ -1517,8 +1533,8 @@ body.search-active .sliding-banner {
                                 <span class="current-price">$999</span>
                             </div>
                             <div class="product-actions">
-                                <button class="btn add-to-cart" data-id="8" data-name="iPhone 16 Pro" data-price="999" data-img="Imgs/pexels-japy-29020349-copy.png">Add to Cart</button>
-                                <button class="btn buy-now" data-id="8" data-name="iPhone 16 Pro" data-price="999" data-img="Imgs/pexels-japy-29020349-copy.png">Buy Now</button>
+                                <button class="btn add-to-cart" data-id="9" data-name="iPhone 16 Pro" data-price="999" data-img="Imgs/pexels-japy-29020349-copy.png">Add to Cart</button>
+                                <button class="btn buy-now" data-id="9" data-name="iPhone 16 Pro" data-price="999" data-img="Imgs/pexels-japy-29020349-copy.png">Buy Now</button>
                             </div>
                         </div>
                     </div>
@@ -1533,8 +1549,8 @@ body.search-active .sliding-banner {
                                 <span class="current-price">$3,699</span>
                             </div>
                             <div class="product-actions">
-                                <button class="btn add-to-cart" data-id="9" data-name="Apple Vision Pro" data-price="3699" data-img="Imgs/apple-vision-pro-features.jpg">Add to Cart</button>
-                                <button class="btn buy-now" data-id="9" data-name="Apple Vision Pro" data-price="3699" data-img="Imgs/apple-vision-pro-features.jpg">Buy Now</button>
+                                <button class="btn add-to-cart" data-id="10" data-name="Apple Vision Pro" data-price="3699" data-img="Imgs/apple-vision-pro-features.jpg">Add to Cart</button>
+                                <button class="btn buy-now" data-id="10" data-name="Apple Vision Pro" data-price="3699" data-img="Imgs/apple-vision-pro-features.jpg">Buy Now</button>
                             </div>
                         </div>
                     </div>
@@ -1549,8 +1565,8 @@ body.search-active .sliding-banner {
                                 <span class="current-price">$1,420</span>
                             </div>
                             <div class="product-actions">
-                                <button class="btn add-to-cart" data-id="10" data-name="Samsung Galaxy S25 Ultra" data-price="1420" data-img="Imgs/custom_filename.png">Add to Cart</button>
-                                <button class="btn buy-now" data-id="10" data-name="Samsung Galaxy S25 Ultra" data-price="1420" data-img="Imgs/custom_filename.png">Buy Now</button>
+                                <button class="btn add-to-cart" data-id="11" data-name="Samsung Galaxy S25 Ultra" data-price="1420" data-img="Imgs/custom_filename.png">Add to Cart</button>
+                                <button class="btn buy-now" data-id="11" data-name="Samsung Galaxy S25 Ultra" data-price="1420" data-img="Imgs/custom_filename.png">Buy Now</button>
                             </div>
                         </div>
                     </div>
@@ -1566,8 +1582,8 @@ body.search-active .sliding-banner {
                                 <span class="current-price">$550</span>
                             </div>
                             <div class="product-actions">
-                                <button class="btn add-to-cart" data-id="11" data-name="STGAubron Gaming PC Bundle" data-price="550" data-img="Imgs/level_3_bundle_22.png">Add to Cart</button>
-                                <button class="btn buy-now" data-id="11" data-name="STGAubron Gaming PC Bundle" data-price="550" data-img="Imgs/level_3_bundle_22.png">Buy Now</button>
+                                <button class="btn add-to-cart" data-id="12" data-name="STGAubron Gaming PC Bundle" data-price="550" data-img="Imgs/level_3_bundle_22.png">Add to Cart</button>
+                                <button class="btn buy-now" data-id="12" data-name="STGAubron Gaming PC Bundle" data-price="550" data-img="Imgs/level_3_bundle_22.png">Buy Now</button>
                             </div>
                         </div>
                     </div>
@@ -1582,8 +1598,8 @@ body.search-active .sliding-banner {
                                 <span class="current-price">FREE</span>
                             </div>
                             <div class="product-actions">
-                                <button class="btn add-to-cart" data-id="12" data-name="Dingo FULL PC Bundle" data-price="0" data-img="Imgs/61qko9+DJGL._AC_SY300_SX300_.jpg">Add to Cart</button>
-                                <button class="btn buy-now" data-id="12" data-name="Dingo FULL PC Bundle" data-price="0" data-img="Imgs/61qko9+DJGL._AC_SY300_SX300_.jpg">Buy Now</button>
+                                <button class="btn add-to-cart" data-id="13" data-name="Dingo FULL PC Bundle" data-price="0" data-img="Imgs/61qko9+DJGL._AC_SY300_SX300_.jpg">Add to Cart</button>
+                                <button class="btn buy-now" data-id="13" data-name="Dingo FULL PC Bundle" data-price="0" data-img="Imgs/61qko9+DJGL._AC_SY300_SX300_.jpg">Buy Now</button>
                             </div>
                         </div>
                     </div>
